# QCHI

./: .gitignore  DESKTOP_VSCODE_LITE_PLAN.md  GEMINI_HANDOFF.md  PROJECT_BRIEF.md  PUSH_TEST_LINE.txt  QCHI_PROJECT_FLOW.html  README.md  pyproject.toml  qchi_cli.py
.github/workflows/: qchi-lint.yml
checklists/: QUALITY_GATE.md
dashboard/: index.html  learning_data.json
docs/: CHANGELOG.md  HOST_COMMANDS.md  INSTALL_AND_USE.md  INSTALL_PREREQS.md  OPENCODE_REGISTER.md  PORTABILITY_PLAN.md  PROJECT_INTENT.md  TASKBOARD.md  TOP_LAYER_PORTABLE_SPEC.md  WORKFLOW_PORTABLE.md
scripts/: bootstrap_opencode_ubuntu.sh  host_help.sh  register_opencode_qchi.sh  run_conformance.sh  run_learning_dashboard.sh
skills/qchi/: SKILL.md
skills/qchi-r/: SKILL.md
skills/qchi-r/adapters/: antigravity.md  cursor.md  generic.md  openclaw.md  opencode.md
skills/qchi-r/checklists/: QUALITY_GATE.md
skills/qchi-r/examples/: sample_response.md
skills/qchi-r/learning/: README.md
skills/qchi-r/references/: ADAPTER_CONTRACT.md  AGENT_MESSAGE_SCHEMA.yaml  ASSUMPTION_DEBT_TRACKER.md  BOOKS_MANIFEST_TEMPLATE.yaml  DOMAIN_PLAYBOOK_OQS.md  EQUATION_PROVENANCE_LEDGER.md  KNOWLEDGE_ACQUISITION_WORKFLOW.md  (+14 more)
skills/qchi-research-layer/: SKILL.md
skills/qchi-top-layer/: SKILL.md
templates/: OUTPUT_TEMPLATE.md  SYSTEM_PROMPT.md
tests/: test_qchi_cli.py
tools/: build_learning_dashboard.py  check_env.sh  init_lyx_artifacts.sh  qchi_lyx_lint.py  qchi_sync_server.py  run_benchmarks.py  validate_project_learning.py  validate_repro_bundle.py
tools/qchi-lint/: Cargo.toml  README.md
(+60 files in other folders)
